test/tests/stages/11_long_integers/valid/libraries/maintain_stack_alignment_client.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[45]:
  long
  identifier(add_variables)
  (
  long
  identifier(x)
  ,
  long
  identifier(y)
  ,
  int
  identifier(z)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  long
  identifier(x)
  =
  const int(3)
  ;
  long
  identifier(y)
  =
  const int(4)
  ;
  int
  identifier(z)
  =
  const int(5)
  ;
  return
  identifier(add_variables)
  (
  identifier(x)
  ,
  identifier(y)
  ,
  identifier(z)
  )
  ;
  }
