test/tests/stages/11_long_integers/invalid_parse/var_name_long.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  long
  =
  const int(5)
  ;
  return
  long
  ;
  }
